feat: add favicon

--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ title: Yaarn Docs
 description: Documentation for Yaarn
 theme: just-the-docs
 logo: /assets/images/logo.png
+favicon_ico: /assets/images/favicon.ico
 
 url: https://docs.yaarn.ai
 color_scheme: yaarn
